    - added event watcher, dialog, file selection, and panes examples to
      gtk.php. (Markus)
    - added Gtk::signal_(add|remove)_emission_hook(), Gtk::signal_name(), and
      Gtk::signal_lookup() functions. (Markus)
    - added GtkCList::get_selection_info(). (Andrei)
    - added GtkCList methods set_row_data(), get_row_data(). (Markus)
    - added support for GtkScintilla, a text-editing widget. (Andrei)
    - implemented GladeXML methods signal_connect_object() and
      signal_autoconnect_object(). (Andrei)
    - changed PHP-visible extension name from 'gtk' to 'php-gtk'. (Andrei)

Version 0.1 "the void which binds" 1-Aug-2001
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    - added GDK keysyms constants. (Andrei)
    - fixed bug with GtkStyle::copy() that was not returning the result
      properly. (Andrei)
    - implemented support for struct based classes (GdkRectangle, GtkAllocation,
      GtkRequisition, etc). (Andrei)
    - finished drag-n-drop support. (Andrei)
    - ported Scribble example from C. (Andrei)
    - modified GdkWindow::get_pointer() to be simpler, without XInput support.
      (Andrei)
    - changed 'area' event property to be a GdkRectangle. (Andrei)
    - changed 'is_hint' event property to be boolean. (Andrei)
    - added ability to query the state and allocation of a widget. (Andrei)
    - added direct construction of pixmaps. (Andrei)
    - added GdkWindow::set_icon() method. (Andrei)
    - implemented GtkList methods insert_items() and prepend_items(). (Andrei)
    - implemented new PHP-like build system that supports adding extensions to
      PHP-GTK. (Andrei)
    - implemented GtkCTree methods node_get_pixtext(), node_get_pixmap(), and
      get_node_info().  (Andrei)
    - implemented GtkObject::emit(), thus allowing programmatical emission of
      signals. (Andrei)
    - added support for accessing GtkObject arguments via get_arg() and
      set_arg() methods. (Andrei)
