@@ -1,5 +1,7 @@
-    - added event watcher, dialog, file selection, and panes examples to
-      gtk.php. (Markus)
+    - added GtkNotebook::query_tab_label_packing(),
+      GtkBox::query_child_packing(). (Markus)
+    - added event watcher, dialog, file selection, panes, and notebook examples
+      to gtk.php. (Markus)
     - added Gtk::signal_(add|remove)_emission_hook(), Gtk::signal_name(), and
       Gtk::signal_lookup() functions. (Markus)
     - added GtkCList::get_selection_info(). (Andrei)
